# pybids

./: .buildinfo  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  api.html  appveyor.yml  codecov.yml  genindex.html  index.html  introduction.html  long_description.rst  min-requirements.txt  objects.inv  pyproject.toml  requirements.txt  ruff.toml  schema_integration_demo.ipynb  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tune_toc.html  user_guide.html  versioneer.py  whats_new.html
.circleci/: artifact_path  config.yml
.github/: codespell_exclude_lines.txt  codespell_ignore_words.txt  dependabot.yml
.github/workflows/: build-test-deploy.yml  codespell.yml  docs.yml  package.yml  pre-release.yml  prerelease.yml  stable.yml  test.yml  update_submodules.yml
_modules/: index.html
_modules/bids/: config.html  utils.html
_modules/bids/layout/: index.html  layout.html  models.html  utils.html
_modules/bids/modeling/: auto_model.html  statsmodels.html
_modules/bids/reports/: report.html
_modules/bids/variables/: collections.html  io.html  variables.html
_modules/bids_validator/: bids_validator.html
_sources/: index.rst.txt  user_guide.rst.txt
_sources/analysis/: index.rst.txt
_sources/examples/: statsmodels_tutorial.md.txt
analysis/: index.html
bids/: __init__.py  _version.py  bids.py  bidsdir_git.py  bidspaths.py  cli.py  config.py  conftest.py  due.py  exceptions.py  morphing_time.py  statsmodels_design_synthesizer.py  utils.py  version.py  visualize.py
bids/analysis/: README.md  __init__.py  analysis.py  auto_model.py  base.py  hrf.py  model_design.py  model_spec.py  utils.py  variables.py
bids/analysis/tests/: test_analysis.py  test_automodel.py  test_base.py  test_entities.py  test_io.py  test_model_design.py  test_model_spec.py  test_transformations.py  test_variables.py
bids/analysis/transform/: __init__.py  base.py  compute.py  munge.py
bids/analysis/transformations/: __init__.py  base.py  compute.py  munge.py
bids/analysis/variables/: __init__.py  base.py  collections.py  entities.py  io.py  utils.py  variables.py
bids/design/: __init__.py  base.py
bids/design/tests/: test_base.py
bids/events/: README.md  __init__.py  base.py
bids/events/tests/: test_base.py  test_transforms.py
bids/events/transform/: __init__.py  base.py  compute.py  munge.py
bids/ext/: __init__.py
bids/grabbids/: README.md  __init__.py  bids_layout.py  bids_validator.py  sample_validation_config.json  utils.py
bids/grabbids/config/: bids.json  derivatives.json
bids/grabbids/tests/: test_grabbids.py  test_validator.py
bids/layout/: README.md  __init__.py  bids_layout.py  bids_validator.py  core.py  db.py  entities.py  index.py  layout.py  layout_v2.py  models.py  nodes.py  utils.py  validation.py  writing.py
bids/layout/config/: bids-nodot.json  bids.json  derivatives.json
bids/layout/tests/: conftest.py  test_core.py  test_db.py  test_layout.py  test_layout_on_examples.py  test_layout_v2.py  test_metadata_index.py  test_models.py  test_path_building.py  test_remote_bids.py  test_rootpath.py  test_utils.py  test_validation.py  test_writing.py
bids/modeling/: README.md  __init__.py  auto_model.py  hrf.py  model_spec.py  statsmodels.py
bids/modeling/report/: base.py  report_template.jinja  utils.py
bids/modeling/tests/: test_analysis.py  test_automodel.py  test_model_spec.py  test_statsmodels.py  test_transformations.py
bids/modeling/transformations/: __init__.py  base.py  compute.py  munge.py
bids/reports/: README.md  __init__.py  parameters.py  parsing.py  report.py  templates.py  utils.py
bids/reports/config/: converters.json
bids/reports/tests/: test_parameters.py  test_parsing.py  test_report.py
bids/tests/: __init__.py  bids_specs.json  bids_specs_with_oligarchy.json  test_bids.py  test_cli.py  test_config.py  test_morphing_time.py  test_rootpath.py  test_statsmodels-design-synthesizer.py  test_visualize.py  utils.py
bids/transform/: __init__.py  base.py  transform.py
bids/transform/tests/: test_base.py  test_transforms.py
bids/variables/: __init__.py  collections.py  entities.py  io.py  kollekshuns.py  variables.py
bids/variables/tests/: test_collections.py  test_entities.py  test_io.py  test_variables.py
bids_ng/: dataset.py
bids_ng/types/: __init__.py  api1.py  enums.py  utils.py
doc/: Makefile  api.rst  conf.py  index.rst  introduction.rst  tune_toc.rst  user_guide.rst
doc/_templates/: class.rst
doc/analysis/: index.rst
doc/examples/: index.rst  pybids_tutorial.md  reports_tutorial.md  statsmodels_tutorial.md
doc/grabbids/: index.rst
doc/includes/: big_toc_css.rst  bigger_toc_css.rst
doc/layout/: index.rst
doc/reports/: index.rst
doc/sphinxext/: docscrape.py  docscrape_sphinx.py  github.py  math_dollar.py  numpydoc.py
doc/tools/: apigen.py  buildmodref.py
examples/: README.txt  bids_layout_query.ipynb  bids_to_pandas.ipynb  configurations.ipynb  creating_bids_filename.ipynb  derivatives.ipynb  filenames.ipynb  index.html  plot_report.py  pybids tutorial.ipynb  pybids_tutorial.html  pybids_tutorial.ipynb  reports.ipynb  reports_tutorial.html  reports_tutorial.ipynb  reports_tutorial.md  statsmodels.ipynb  statsmodels_tutorial.html  statsmodels_tutorial.ipynb  statsmodels_tutorial.md  validation.ipynb
includes/: big_toc_css.html  bigger_toc_css.html
layout/: index.html
paper/: paper.bib  paper.md
pybids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports/: index.html
scripts/: Figure1.ipynb
src/bids/: __init__.py  __main__.py  _version.py  cli.py  config.py  conftest.py  due.py  exceptions.py  utils.py
src/bids/ext/: __init__.py
src/bids/layout/: README.md  __init__.py  config_gen.py  db.py  index.py  (+5 more)
tools/: check_noqa_budget.py  prep_zenodo.py  update_changes.sh  update_requirements.py
tools/ci/: build_archive.sh  env.sh  install.sh  install_dependencies.sh  install_extras.sh
(+521 files in other folders)
