[metadata]
name = pybids
url = http://github.com/bids-standard/pybids
author = PyBIDS Developers
author_email = bids-discussion@googlegroups.com
maintainer = PyBIDS Developers
maintainer_email = bids-discussion@googlegroups.com
description = bids: interface with datasets conforming to BIDS
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.5
install_requires =
    numpy
    scipy
    nibabel >=2.1
    pandas >=0.23
    formulaic
    sqlalchemy <1.4.0.dev0
    bids-validator
    num2words
    click
tests_require =
    pytest >=3.3
    mock
    pathlib ; python_version < "3.4"
packages = find:
include_package_data = True

[options.extras_require]
modeling =
doc =
    sphinx >=2.2
    numpydoc
    sphinx_rtd_theme
docs =
    %(doc)s
test =
    pytest >=3.3
tests =
    %(test)s
ci_tests =
    %(test)s
    codecov
    pytest-cov
    pytest-xdist
tutorial =
    nbconvert
    jupyter_client
    ipykernel
dev =
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    pybids=bids.cli:cli

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = bids/_version.py
versionfile_build = bids/_version.py
tag_prefix =
parentdir_prefix =
