[metadata]
name = pybids
url = http://github.com/bids-standard/pybids
author = PyBIDS Developers
author_email = bids-discussion@googlegroups.com
maintainer = PyBIDS Developers
maintainer_email = bids-discussion@googlegroups.com
description = bids: interface with datasets conforming to BIDS
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
install_requires =
    numpy
    scipy
    nibabel >=2.1
    pandas >=0.23
    formulaic ~=0.2.4
    sqlalchemy <1.4.0.dev0
    bids-validator
    num2words
    click
tests_require =
    pytest >=3.3
    mock
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.2
    numpydoc
    sphinx_rtd_theme
docs =
    %(doc)s
plotting =
    graphviz
plottings =
    %(plotting)s
test =
    pytest >=3.3
tests =
    %(test)s
ci_tests =
    %(test)s
    %(plotting)s
    codecov
    pytest-cov
    pytest-xdist
tutorial =
    nbconvert
    jinja2 <3  # Required until nbconvert handles all deprecations/removals
    markupsafe <2.1  # Required until we can upgrade jinja2
    jupyter_client
    ipykernel
dev =
    %(doc)s
    %(test)s
    %(plotting)s

[options.entry_points]
console_scripts =
    pybids=bids.cli:cli

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = bids/_version.py
versionfile_build = bids/_version.py
tag_prefix =
parentdir_prefix =

[codespell]
skip = ./.git,external,versioneer.py,_version.py
ignore-words = .github/codespell_ignore_words.txt
