[metadata]
platforms = OS Independent

[options]
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.2, !=5.1.0
    numpydoc
    sphinx_rtd_theme
    myst_nb
    jupytext
docs =
    %(doc)s
plotting =
    graphviz
plottings =
    %(plotting)s
test =
    pytest >=3.3
    pytest-cov
    bsmschema
    coverage[toml]
tests =
    %(test)s
ci_tests =
    %(test)s
    %(plotting)s
    codecov
    pytest-xdist
dev =
    %(doc)s
    %(test)s
    %(plotting)s

[codespell]
skip = ./.git,external,versioneer.py,_version.py
ignore-words = .github/codespell_ignore_words.txt
exclude-file = .github/codespell_exclude_lines.txt
